--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,9 +15,9 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.7'
+          - "1.7"
           - "^1.8.0-0"
-          - 'nightly'
+          - "nightly"
         os:
           - ubuntu-latest
         arch:
