--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
+DrWatson = "2"
 julia = "1.7"
 
 [extras]
