--- a/Project.toml
+++ b/Project.toml
@@ -4,17 +4,25 @@ authors = ["azzaare <jf@baffier.fr> and contributors"]
 version = "0.1.0"
 
 [deps]
+Clp = "e2554f3b-3117-50c0-817c-e040a3ddf72d"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+GraphsFlows = "06909019-6f44-4949-96fc-b9d9aaa02889"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
+Clp = "1"
 DataFrames = "1"
+Dictionaries = "0.3"
 Distributions = "0.25"
 DrWatson = "2"
+Graphs = "1"
+GraphsFlows = "0.1"
 PrettyTables = "1"
 julia = "1.8"
 
