--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,10 +1,7 @@
 name: CI
 on:
-  push:
-    branches:
-      - main
-    tags: '*'
-  pull_request:
+  - push
+  - pull_request
 concurrency:
   # Skip intermediate builds: always.
   # Cancel intermediate builds: only if it is a pull request build.
@@ -18,9 +15,8 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.7'
-          - '1.8'
-          - 'nightly'
+          - "^1.8.0-0"
+          - "nightly"
         os:
           - ubuntu-latest
         arch:
