--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "KuMo"
 uuid = "b681f84e-bd48-4deb-8595-d3e0ff1e4a55"
 authors = ["azzaare <jf@baffier.fr> and contributors"]
-version = "0.1.0"
+version = "0.1.1"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -19,14 +19,17 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 
 [compat]
+CSV = "0.10"
 DataFrames = "1"
 Dictionaries = "0.3"
 Distributions = "0.25"
 DrWatson = "2"
 Graphs = "1"
 JuMP = "1"
+MathOptInterface = "1"
 PrettyTables = "1"
 SimpleTraits = "0.9"
+StatsPlots = "0.14"
 julia = "1.8"
 
 [extras]
