--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
+# Julia
+
 *.jl.*.cov
 *.jl.cov
 *.jl.mem
 /Manifest.toml
 test/Manifest.toml
 /docs/build/
+
+# TeX
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.pdf
+*.synctex.gz
