CompatHelper: add new compat entry for PGFPlotsX at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ DrWatson = "2"
 Graphs = "1"
 JuMP = "1"
 MathOptInterface = "1"
+PGFPlotsX = "1"
 PrettyTables = "1"
 ProgressMeter = "1"
 SimpleTraits = "0.9"
