CompatHelper: add new compat entry for GLMakie at version 0.6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -29,6 +29,7 @@ DataFrames = "1"
 Dictionaries = "0.3"
 Distributions = "0.25"
 DrWatson = "2"
+GLMakie = "0.6"
 Graphs = "1"
 JuMP = "1"
 MathOptInterface = "1"
