CompatHelper: add new compat entry for RecipesBase at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -34,6 +34,7 @@ JuMP = "1"
 MathOptInterface = "1"
 PrettyTables = "1"
 ProgressMeter = "1"
+RecipesBase = "1"
 SimpleTraits = "0.9"
 StatsPlots = "0.14"
 julia = "1.8"
