CompatHelper: add new compat entry for DataStructures at version 0.18, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -26,6 +26,7 @@ StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 [compat]
 CSV = "0.10"
 DataFrames = "1"
+DataStructures = "0.18"
 Dictionaries = "0.3"
 Distributions = "0.25"
 DrWatson = "2"
