--- a/Project.toml
+++ b/Project.toml
@@ -26,17 +26,21 @@ StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 [compat]
 CSV = "0.10"
 DataFrames = "1"
+DataStructures = "0.18"
 Dictionaries = "0.3"
 Distributions = "0.25"
 DrWatson = "2"
+GLMakie = "0.6"
 Graphs = "1"
 JuMP = "1"
 MathOptInterface = "1"
+PGFPlotsX = "1"
 PrettyTables = "1"
 ProgressMeter = "1"
+RecipesBase = "1"
 SimpleTraits = "0.9"
 StatsPlots = "0.14"
-julia = "1.8"
+julia = "1.7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
