--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ PrettyTables = "1"
 ProgressMeter = "1"
 RecipesBase = "1"
 SimpleTraits = "0.9"
-StatsPlots = "0.14"
+StatsPlots = "0.14, 0.15"
 julia = "1.7"
 
 [extras]
