--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "KuMo"
 uuid = "b681f84e-bd48-4deb-8595-d3e0ff1e4a55"
 authors = ["azzaare <jf@baffier.fr> and contributors"]
-version = "0.1.27"
+version = "0.1.28"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -39,7 +39,7 @@ PrettyTables = "1"
 ProgressMeter = "1"
 RecipesBase = "1"
 SimpleTraits = "0.9"
-StatsPlots = "0.14"
+StatsPlots = "0.14, 0.15"
 julia = "1.7"
 
 [extras]
