--- a/visualization/Project.toml
+++ b/visualization/Project.toml
@@ -2,6 +2,7 @@
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 KuMo = "b681f84e-bd48-4deb-8595-d3e0ff1e4a55"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
