CompatHelper: bump compat for PrettyTables to 2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -37,7 +37,7 @@ JuMP = "1"
 Makie = "0.17"
 MathOptInterface = "1"
 PGFPlotsX = "1"
-PrettyTables = "1"
+PrettyTables = "1, 2"
 ProgressMeter = "1"
 RecipesBase = "1"
 SimpleTraits = "0.9"
