CompatHelper: bump compat for Makie to 0.18, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -34,7 +34,7 @@ Distributions = "0.25"
 DrWatson = "2"
 Graphs = "1"
 JuMP = "1"
-Makie = "0.17"
+Makie = "0.17, 0.18"
 MathOptInterface = "1"
 PGFPlotsX = "1"
 PrettyTables = "1"
