Fix for Makie 0.18 compat. Add GraphMakie dep

--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "KuMo"
 uuid = "b681f84e-bd48-4deb-8595-d3e0ff1e4a55"
 authors = ["azzaare <jf@baffier.fr> and contributors"]
-version = "0.1.31"
+version = "0.1.32"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -11,6 +11,7 @@ DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
@@ -33,16 +34,17 @@ Dictionaries = "0.3"
 Distributions = "0.25"
 DrWatson = "2"
 Graphs = "1"
+GraphMakie = "0.4"
 JuMP = "1"
-Makie = "0.17"
+Makie = "0.18"
 MathOptInterface = "1"
 PGFPlotsX = "1"
-PrettyTables = "1"
+PrettyTables = "2"
 ProgressMeter = "1"
 RecipesBase = "1"
 SimpleTraits = "0.9"
-StatsPlots = "0.14, 0.15"
-julia = "1.7"
+StatsPlots = "0.15"
+julia = "1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
