--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,14 +15,14 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - "1.7"
-          - "^1.8.0-0"
+          - "1.8"
           - "nightly"
         os:
           - ubuntu-latest
+          - macOS-latest
+          - windows-latest
         arch:
           - x64
-          - x86
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
