CompatHelper: bump compat for Makie to 0.19, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ DrWatson = "2"
 GraphMakie = "0.4"
 Graphs = "1"
 JuMP = "1"
-Makie = "0.18"
+Makie = "0.18, 0.19"
 MathOptInterface = "1"
 PGFPlotsX = "1"
 PrettyTables = "2"
