CompatHelper: bump compat for GraphMakie to 0.5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ DataStructures = "0.18"
 Dictionaries = "0.3"
 Distributions = "0.25"
 DrWatson = "2"
-GraphMakie = "0.4"
+GraphMakie = "0.4, 0.5"
 Graphs = "1"
 JuMP = "1"
 Makie = "0.18"
