--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 PGFPlotsX = "8314cec4-20b6-5062-9cdb-752b83310925"
+PackageCompatUI = "65465c31-362d-417a-a2f0-7fa38ae507b9"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -33,10 +34,10 @@ DataStructures = "0.18"
 Dictionaries = "0.3"
 Distributions = "0.25"
 DrWatson = "2"
-GraphMakie = "0.4"
+GraphMakie = "0.5"
 Graphs = "1"
 JuMP = "1"
-Makie = "0.18"
+Makie = "0.19"
 MathOptInterface = "1"
 PGFPlotsX = "1"
 PrettyTables = "2"
