CompatHelper: add new compat entry for PackageCompatUI at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -43,6 +43,7 @@ Makie = "0.19"
 MathOptInterface = "1"
 PackageCompatUI = "1"
 PGFPlotsX = "1"
+PackageCompatUI = "1"
 PrettyTables = "2"
 ProgressMeter = "1"
 RecipesBase = "1"
