--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,8 @@ RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
+TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 
 [compat]
 CSV = "0.10"
@@ -39,12 +41,15 @@ Graphs = "1"
 JuMP = "1"
 Makie = "0.19"
 MathOptInterface = "1"
+PackageCompatUI = "1"
 PGFPlotsX = "1"
 PrettyTables = "2"
 ProgressMeter = "1"
 RecipesBase = "1"
 SimpleTraits = "0.9"
 StatsPlots = "0.15"
+TestItemRunner = "0.2"
+TestItems = "0.1"
 julia = "1.8"
 
 [extras]
