--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,3 +1,3 @@
 [deps]
-Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
