--- a/scripts/edgesys2023/Project.toml
+++ b/scripts/edgesys2023/Project.toml
@@ -1,5 +1,7 @@
 [deps]
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 KuMo = "b681f84e-bd48-4deb-8595-d3e0ff1e4a55"
 PGFPlotsX = "8314cec4-20b6-5062-9cdb-752b83310925"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
