--- a/Project.toml
+++ b/Project.toml
@@ -1,22 +1,16 @@
 authors = ["azzaare <jf@baffier.fr> and contributors"]
 name = "KuMo"
 uuid = "b681f84e-bd48-4deb-8595-d3e0ff1e4a55"
-version = "0.1.39"
+version = "0.1.40"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
-Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
-GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
-JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
-Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
-MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
-PGFPlotsX = "8314cec4-20b6-5062-9cdb-752b83310925"
 PackageCompatUI = "65465c31-362d-417a-a2f0-7fa38ae507b9"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
@@ -24,9 +18,18 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
-StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
+
+[weakdeps]
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+
+[extensions]
+KuMoFiguresExt = ["StatsPlots"]
+KuMoMakieExt = ["Colors", "Makie"]
+KuMoPlotsExt = ["StatsPlots"]
 
 [compat]
 CSV = "0.10"
@@ -36,12 +39,8 @@ DataStructures = "0.18"
 Dictionaries = "0.3"
 Distributions = "0.25"
 DrWatson = "2"
-GraphMakie = "0.5"
 Graphs = "1"
-JuMP = "1"
 Makie = "0.19"
-MathOptInterface = "1"
-PGFPlotsX = "1"
 PackageCompatUI = "1"
 PrettyTables = "2"
 ProgressMeter = "1"
@@ -50,7 +49,7 @@ SimpleTraits = "0.9"
 StatsPlots = "0.15"
 TestItemRunner = "0.2"
 TestItems = "0.1"
-julia = "1.8"
+julia = "1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
