--- a/Project.toml
+++ b/Project.toml
@@ -44,7 +44,7 @@ Random = "1"
 ResizableArrays = "0.3"
 SparseArrays = "1"
 StatsPlots = "0.15"
-TestItemRunner = "0.2"
+TestItemRunner = "0.2, 1"
 TestItems = "0.1"
 julia = "1.9"
 
